--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "bullmq": "^5.41.6",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "helmet": "^8.0.0",
+        "ioredis": "^5.5.0",
         "request": "^2.88.2"
     }
 }
